// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddButton renders correctly 1`] = `
<button
  className="add-button"
>
  <img
    className="icon"
    src="test-file-stub"
  />
</button>
`;

exports[`BackButton renders correctly 1`] = `
<button
  className="back-button"
>
  <img
    className="icon"
    src="test-file-stub"
  />
</button>
`;

exports[`BackTab renders correctly 1`] = `
<button
  className="back-tab"
>
  <img
    className="icon"
    src="test-file-stub"
  />
</button>
`;

exports[`ButtonDestructive renders correctly 1`] = `
<button
  className="button btn-destructive"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonDestructive renders disabled button 1`] = `
<button
  className="button btn-destructive"
  disabled={true}
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonDestructive renders focused button 1`] = `
<button
  className="button btn-destructive focused"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonDestructive renders large button 1`] = `
<button
  className="button btn-primitive"
>
  <div
    className="div-large"
  >
    Submit
  </div>
</button>
`;

exports[`ButtonInverted renders correctly 1`] = `
<button
  className="button btn-inverted"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonInverted renders disabled button 1`] = `
<button
  className="button btn-inverted"
  disabled={true}
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonInverted renders focused button 1`] = `
<button
  className="button btn-inverted focused"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonInverted renders large button 1`] = `
<button
  className="button btn-primitive"
>
  <div
    className="div-large"
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimary renders correctly 1`] = `
<button
  className="button btn-primary"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimary renders disabled button 1`] = `
<button
  className="button btn-primary"
  disabled={true}
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimary renders focused button 1`] = `
<button
  className="button btn-primary focused"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimary renders large button 1`] = `
<button
  className="button btn-primitive"
>
  <div
    className="div-large"
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimitive renders correctly 1`] = `
<button
  className="button btn-primitive"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimitive renders disabled button 1`] = `
<button
  className="button btn-primitive"
  disabled={true}
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimitive renders focused button 1`] = `
<button
  className="button btn-primitive focused"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonPrimitive renders large button 1`] = `
<button
  className="button btn-primitive"
>
  <div
    className="div-large"
  >
    Submit
  </div>
</button>
`;

exports[`ButtonSecondary renders correctly 1`] = `
<button
  className="button btn-secondary"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonSecondary renders disabled button 1`] = `
<button
  className="button btn-secondary"
  disabled={true}
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonSecondary renders focused button 1`] = `
<button
  className="button btn-secondary focused"
>
  <div
    className=""
  >
    Submit
  </div>
</button>
`;

exports[`ButtonSecondary renders large button 1`] = `
<button
  className="button btn-primitive"
>
  <div
    className="div-large"
  >
    Submit
  </div>
</button>
`;

exports[`CopyButton renders correctly 1`] = `
<button
  className="copy-button"
>
  <img
    className="icon copy"
    src="test-file-stub"
  />
  <img
    className="icon copyall"
    src="test-file-stub"
  />
  <img
    className="icon copied"
    src="test-file-stub"
  />
</button>
`;
